updating module 3 work

--- a/module-3/Nebel_EX2.html
+++ b/module-3/Nebel_EX2.html
@@ -10,7 +10,7 @@
   <meta name="description" content="A basic introduction into HTML and CSS styling" />
   <meta name="keywords" content="CSS, HTML, Web Development, Bellevue University" />
   <meta name="robots" content="nofollow" />
-  <meta http-equiv="author" content="Anthony Nebel" />
+  <meta name="author" content="Anthony Nebel" />
 
 </head>
 <body>
