--- a/module-3/Nebel_EX2.html
+++ b/module-3/Nebel_EX2.html
@@ -5,7 +5,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;700&family=Quattrocento:wght@400;700&display=swap" rel="stylesheet"> 
   
-  <link href="nebel_EX2.css" type="text/css" rel="stylesheet" />
+  <link href="Nebel_EX2.css" type="text/css" rel="stylesheet" />
 
   <meta name="description" content="A basic introduction into HTML and CSS styling" />
   <meta name="keywords" content="CSS, HTML, Web Development, Bellevue University" />
