still trying to fix a file name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="module-2/nebel_EX1.html">Assignment 2.2</a>
       </li>
       <li>
-        <a href="module-3/nebel_EX2.html">Assignment 3.2</a>
+        <a href="module-3/Nebel_EX2.html">Assignment 3.2</a>
       </li>
       <li>
         <a href="module-4/nebel_EX3.html">Assignment 4.3</a>
