adding module7 work

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Anthony Nebel's Landing Page</h1>
     <h2>CSD 340 Web Development with HTML and CSS</h2>
 
-	 	
+    
     <hr />
-		
+    
     <h3>Module Assignments</h3>
     <ul>
       <li>
@@ -26,6 +26,10 @@
       </li>
       <li>
         <a href="module-5/nebel_EX4.html">Assignment 5.2</a>
+      </li>
+      <li>
+        <a href="module-7/nebel_EX5.html">Assignment 7.2</a>
+      </li>
     </ul>
 
     <h3>Projects</h3>
