--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <li>
         <a href="module-7/nebel_EX5.html">Assignment 7.2</a>
       </li>
+      <li>
+        <a href="module-9/nebel_EX6.html">Assignment 9.2</a>
+      </li>
     </ul>
 
     <h3>Projects</h3>
