--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h3>Projects</h3>
     <ul>
       <li>
-        <a href="#">bioSite Project Home Page</a>
+        <a href="https://anthonynebel.github.io/bioSite/" target="_blank">bioSite Project Home Page</a>
       </li>
       <li>
         <a href="#">Final Exam</a>
