adding module 12.3 work

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="https://anthonynebel.github.io/bioSite/" target="_blank">bioSite Project Home Page</a>
       </li>
       <li>
-        <a href="#">Final Exam</a>
+        <a href="module-12/final.html">Final Exam</a>
       </li>
     </ul>
 
